# EDDAI-EliteDangerousApiInterface

./: .env.template  .gitignore  Comand  Dockerfile  EDDAI - Elite Dangerous API Interface.yaml  LICENSE  README.md  comand.txt  container  deply.sh  docker-compose-djnago.yml  docker-compose-services.yml  docker-compose.dev.yml  docker-compose.yml  environment.yml  request.text  requirements.txt
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: djnago.agent.md  git-workflow-manager.agent.md  python-pro.agent.md  ui-designer.agent.md  vue-expert.agent.md
.github/workflows/: autodeploy.yml  build-and-deply-image.yml  check-and-test.yml  deploy.yml
BaseSQL/: 1_ed_economy.json  2_ed_system.json  3_ed_bgs.json  4_ed_body.json  5_ed_exploration.json  6_ed_material.json  8_ed_station.json  dump-ed_info_new_dev-202406091103.sql  ed_info-24-04-23.sql
CA/: ca_certificate.cer
common/: README.rst  pyproject.toml
common/core/models/: __init__.py
data surce/: ParentsStarBody.json  analytics.json  scan star.json  scanBody.json
eddai_EliteDangerousApiInterface/: .dockerignore  Dockerfile  db_ed.sqlite3  eddn.py  entrypoint  entrypoint.sh  environment-dev.yml  environment.yml  manage.py  migrate.py  package-lock.json
mysql_config/: my.cnf
nginx/: nginx.conf
rabbitmq_config/: rabbitmq.config
redis_config/: redis.conf
services/: Dockerfile.dev  environment.yml
workflows/: check-and-test.yml  deploy.yml
(+747 files in other folders)
