[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "core"
version = "0.1"
dependencies = [
    "django>=5.1.1",
]
description = ""
readme = "README.rst"
requires-python = ">= 3.11"
authors = [
    {name = "Fabio Zorzetto", email = "italiangamingsystem@gmail.com"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]